compilers3/dkk.output
Grammar

    0 $accept: program $end

    1 program: global_declarations main_function

    2 global_declarations: global_declarations global_declaration
    3                    | ε

    4 global_declaration: typedef_declaration
    5                   | const_declaration
    6                   | class_declaration
    7                   | union_declaration
    8                   | global_var_declaration
    9                   | func_declaration

   10 $@1: ε

   11 typedef_declaration: TYPEDEF typename listspec ID $@1 dims SEMI

   12 typename: standard_type
   13         | ID

   14 standard_type: CHAR
   15              | INT
   16              | FLOAT
   17              | VOID

   18 listspec: LIST
   19         | ε

   20 dims: dims LBRACK ICONST RBRACK
   21     | dims LBRACK RBRACK
   22     | ε

   23 const_declaration: CONST typename constdefs SEMI

   24 constdefs: constdefs COMMA constdef
   25          | constdef

   26 constdef: ID dims ASSIGN init_value

   27 init_value: expression
   28           | LBRACE init_values RBRACE
   29           | STRING

   30 expression: expression OROP expression
   31           | expression ANDOP expression
   32           | expression EQUOP expression
   33           | expression RELOP expression
   34           | expression ADDOP expression
   35           | expression MULOP expression
   36           | NOTOP expression
   37           | ADDOP expression
   38           | SIZEOP expression
   39           | INCDEC variable
   40           | variable INCDEC
   41           | variable
   42           | variable LPAREN expression_list RPAREN
   43           | LENGTH LPAREN general_expression RPAREN
   44           | NEW LPAREN general_expression RPAREN
   45           | constant
   46           | LPAREN general_expression RPAREN
   47           | LPAREN standard_type RPAREN
   48           | listexpression

   49 variable: variable LBRACK general_expression RBRACK
   50         | variable DOT ID
   51         | LISTFUNC LPAREN general_expression RPAREN
   52         | decltype ID
   53         | THIS

   54 general_expression: general_expression COMMA general_expression
   55                   | assignment

   56 assignment: variable ASSIGN assignment
   57           | variable ASSIGN STRING
   58           | expression

   59 expression_list: general_expression
   60                | ε

   61 constant: CCONST
   62         | ICONST
   63         | FCONST

   64 listexpression: LBRACK expression_list RBRACK

   65 init_values: init_values COMMA init_value
   66            | init_value

   67 class_declaration: CLASS ID class_body SEMI

   68 class_body: parent LBRACE members_methods RBRACE

   69 parent: COLON ID
   70       | ε

   71 members_methods: members_methods access member_or_method
   72                | access member_or_method

   73 access: PRIVATE COLON
   74       | PROTECTED COLON
   75       | PUBLIC COLON
   76       | ε

   77 member_or_method: member
   78                 | method

   79 member: var_declaration
   80       | anonymous_union

   81 var_declaration: typename variabledefs SEMI

   82 variabledefs: variabledefs COMMA variabledef
   83             | variabledef

   84 $@2: ε

   85 variabledef: LIST ID $@2 dims

   86 $@3: ε

   87 variabledef: ID $@3 dims

   88 anonymous_union: UNION union_body SEMI

   89 union_body: LBRACE fields RBRACE

   90 fields: fields field
   91       | field

   92 field: var_declaration

   93 method: short_func_declaration

   94 short_func_declaration: short_par_func_header SEMI
   95                       | nopar_func_header SEMI

   96 short_par_func_header: func_header_start LPAREN parameter_types RPAREN

   97 func_header_start: typename ID
   98                  | LIST ID

   99 parameter_types: parameter_types COMMA typename pass_list_dims
  100                | typename pass_list_dims

  101 pass_list_dims: listspec dims
  102               | REFER

  103 nopar_func_header: func_header_start LPAREN RPAREN

  104 union_declaration: UNION ID union_body SEMI

  105 global_var_declaration: typename init_variabledefs SEMI

  106 init_variabledefs: init_variabledefs COMMA init_variabledef
  107                  | init_variabledef

  108 init_variabledef: variabledef initializer

  109 initializer: ASSIGN init_value
  110            | ε

  111 func_declaration: short_func_declaration
  112                 | full_func_declaration

  113 $@4: ε

  114 full_func_declaration: full_par_func_header $@4 LBRACE decl_statements RBRACE

  115 $@5: ε

  116 full_func_declaration: nopar_class_func_header $@5 LBRACE decl_statements RBRACE

  117 $@6: ε

  118 full_func_declaration: nopar_func_header $@6 LBRACE decl_statements RBRACE

  119 full_par_func_header: class_func_header_start LPAREN parameter_list RPAREN
  120                     | func_header_start LPAREN parameter_list RPAREN

  121 class_func_header_start: typename func_class ID
  122                        | LIST func_class ID

  123 func_class: ID METH

  124 parameter_list: parameter_list COMMA typename pass_variabledef
  125               | typename pass_variabledef

  126 pass_variabledef: variabledef
  127                 | REFER ID

  128 nopar_class_func_header: class_func_header_start LPAREN RPAREN

  129 decl_statements: declarations statements
  130                | declarations
  131                | statements
  132                | ε

  133 declarations: declarations decltype typename variabledefs SEMI
  134             | decltype typename variabledefs SEMI

  135 decltype: STATIC
  136         | ε

  137 statements: statements statement
  138           | statement

  139 statement: expression_statement
  140          | if_statement
  141          | while_statement
  142          | for_statement
  143          | return_statement
  144          | io_statement
  145          | comp_statement
  146          | CONTINUE SEMI
  147          | BREAK SEMI
  148          | SEMI

  149 expression_statement: general_expression SEMI

  150 if_statement: IF LPAREN general_expression RPAREN statement
  151             | IF LPAREN general_expression RPAREN statement ELSE statement

  152 while_statement: WHILE LPAREN general_expression RPAREN statement

  153 for_statement: FOR LPAREN optexpr SEMI optexpr SEMI optexpr RPAREN statement

  154 optexpr: general_expression
  155        | ε

  156 return_statement: RETURN optexpr SEMI

  157 io_statement: CIN INP in_list SEMI
  158             | COUT OUT out_list SEMI

  159 in_list: in_list INP in_item
  160        | in_item

  161 in_item: variable

  162 out_list: out_list OUT out_item
  163         | out_item

  164 out_item: general_expression
  165         | STRING

  166 $@7: ε

  167 $@8: ε

  168 comp_statement: LBRACE $@7 decl_statements $@8 RBRACE

  169 $@9: ε

  170 main_function: main_header $@9 LBRACE decl_statements RBRACE

  171 main_header: INT MAIN LPAREN RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TYPEDEF (258) 11
    CHAR (259) 14
    INT (260) 15 171
    FLOAT (261) 16
    CONST (262) 23
    UNION (263) 88 104
    CLASS (264) 67
    PRIVATE (265) 73
    PROTECTED (266) 74
    PUBLIC (267) 75
    STATIC (268) 135
    VOID (269) 17
    LIST (270) 18 85 98 122
    CONTINUE (271) 146
    BREAK (272) 147
    THIS (273) 53
    IF (274) 150 151
    ELSE (275) 151
    WHILE (276) 152
    FOR (277) 153
    RETURN (278) 156
    LENGTH (279) 43
    NEW (280) 44
    CIN (281) 157
    COUT (282) 158
    MAIN (283) 171
    FCONST (284) 63
    CCONST (285) 61
    OROP (286) 30
    ANDOP (287) 31
    EQUOP (288) 32
    RELOP (289) 33
    MULOP (290) 35
    NOTOP (291) 36
    INCDEC (292) 39 40
    SIZEOP (293) 38
    LISTFUNC (294) 51
    STRING (295) 29 57 165
    LPAREN (296) 42 43 44 46 47 51 96 103 119 120 128 150 151 152 153 171
    RPAREN (297) 42 43 44 46 47 51 96 103 119 120 128 150 151 152 153 171
    SEMI (298) 11 23 67 81 88 94 95 104 105 133 134 146 147 148 149 153 156 157 158
    DOT (299) 50
    COMMA (300) 24 54 65 82 99 106 124
    ASSIGN (301) 26 56 57 109
    COLON (302) 69 73 74 75
    LBRACK (303) 20 21 49 64
    RBRACK (304) 20 21 49 64
    REFER (305) 102 127
    LBRACE (306) 28 68 89 114 116 118 168 170
    RBRACE (307) 28 68 89 114 116 118 168 170
    METH (308) 123
    INP (309) 157 159
    OUT (310) 158 162
    LOWER_THAN_ELSE (311)
    ADDOP <oper> (312) 34 37
    ICONST <ival> (313) 20 62
    ID <str> (314) 11 13 26 50 52 67 69 85 87 97 98 104 121 122 123 127


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    program (61)
        on left: 1
        on right: 0
    global_declarations (62)
        on left: 2 3
        on right: 1 2
    global_declaration (63)
        on left: 4 5 6 7 8 9
        on right: 2
    typedef_declaration (64)
        on left: 11
        on right: 4
    $@1 (65)
        on left: 10
        on right: 11
    typename <ival> (66)
        on left: 12 13
        on right: 11 23 81 97 99 100 105 121 124 125 133 134
    standard_type <ival> (67)
        on left: 14 15 16 17
        on right: 12 47
    listspec (68)
        on left: 18 19
        on right: 11 101
    dims <arr> (69)
        on left: 20 21 22
        on right: 11 20 21 26 85 87 101
    const_declaration (70)
        on left: 23
        on right: 5
    constdefs (71)
        on left: 24 25
        on right: 23 24
    constdef (72)
        on left: 26
        on right: 24 25
    init_value (73)
        on left: 27 28 29
        on right: 26 65 66 109
    expression <myexpr> (74)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 27 30 31 32 33 34 35 36 37 38 58
    variable <myvar> (75)
        on left: 49 50 51 52 53
        on right: 39 40 41 42 49 50 56 57 161
    general_expression <myexpr> (76)
        on left: 54 55
        on right: 43 44 46 49 51 54 59 149 150 151 152 154 164
    assignment <myexpr> (77)
        on left: 56 57 58
        on right: 55 56
    expression_list (78)
        on left: 59 60
        on right: 42 64
    constant <myexpr> (79)
        on left: 61 62 63
        on right: 45
    listexpression (80)
        on left: 64
        on right: 48
    init_values (81)
        on left: 65 66
        on right: 28 65
    class_declaration (82)
        on left: 67
        on right: 6
    class_body (83)
        on left: 68
        on right: 67
    parent (84)
        on left: 69 70
        on right: 68
    members_methods (85)
        on left: 71 72
        on right: 68 71
    access (86)
        on left: 73 74 75 76
        on right: 71 72
    member_or_method (87)
        on left: 77 78
        on right: 71 72
    member (88)
        on left: 79 80
        on right: 77
    var_declaration (89)
        on left: 81
        on right: 79 92
    variabledefs <idlist> (90)
        on left: 82 83
        on right: 81 82 133 134
    variabledef <id> (91)
        on left: 85 87
        on right: 82 83 108 126
    $@2 (92)
        on left: 84
        on right: 85
    $@3 (93)
        on left: 86
        on right: 87
    anonymous_union (94)
        on left: 88
        on right: 80
    union_body (95)
        on left: 89
        on right: 88 104
    fields (96)
        on left: 90 91
        on right: 89 90
    field (97)
        on left: 92
        on right: 90 91
    method (98)
        on left: 93
        on right: 78
    short_func_declaration (99)
        on left: 94 95
        on right: 93 111
    short_par_func_header (100)
        on left: 96
        on right: 94
    func_header_start (101)
        on left: 97 98
        on right: 96 103 120
    parameter_types (102)
        on left: 99 100
        on right: 96 99
    pass_list_dims (103)
        on left: 101 102
        on right: 99 100
    nopar_func_header (104)
        on left: 103
        on right: 95 118
    union_declaration (105)
        on left: 104
        on right: 7
    global_var_declaration (106)
        on left: 105
        on right: 8
    init_variabledefs <idlist> (107)
        on left: 106 107
        on right: 105 106
    init_variabledef <id> (108)
        on left: 108
        on right: 106 107
    initializer (109)
        on left: 109 110
        on right: 108
    func_declaration (110)
        on left: 111 112
        on right: 9
    full_func_declaration (111)
        on left: 114 116 118
        on right: 112
    $@4 (112)
        on left: 113
        on right: 114
    $@5 (113)
        on left: 115
        on right: 116
    $@6 (114)
        on left: 117
        on right: 118
    full_par_func_header (115)
        on left: 119 120
        on right: 114
    class_func_header_start (116)
        on left: 121 122
        on right: 119 128
    func_class (117)
        on left: 123
        on right: 121 122
    parameter_list (118)
        on left: 124 125
        on right: 119 120 124
    pass_variabledef (119)
        on left: 126 127
        on right: 124 125
    nopar_class_func_header (120)
        on left: 128
        on right: 116
    decl_statements (121)
        on left: 129 130 131 132
        on right: 114 116 118 168 170
    declarations (122)
        on left: 133 134
        on right: 129 130 133
    decltype (123)
        on left: 135 136
        on right: 52 133 134
    statements (124)
        on left: 137 138
        on right: 129 131 137
    statement (125)
        on left: 139 140 141 142 143 144 145 146 147 148
        on right: 137 138 150 151 152 153
    expression_statement (126)
        on left: 149
        on right: 139
    if_statement (127)
        on left: 150 151
        on right: 140
    while_statement (128)
        on left: 152
        on right: 141
    for_statement (129)
        on left: 153
        on right: 142
    optexpr (130)
        on left: 154 155
        on right: 153 156
    return_statement (131)
        on left: 156
        on right: 143
    io_statement (132)
        on left: 157 158
        on right: 144
    in_list (133)
        on left: 159 160
        on right: 157 159
    in_item (134)
        on left: 161
        on right: 159 160
    out_list (135)
        on left: 162 163
        on right: 158 162
    out_item (136)
        on left: 164 165
        on right: 162 163
    comp_statement (137)
        on left: 168
        on right: 145
    $@7 (138)
        on left: 166
        on right: 168
    $@8 (139)
        on left: 167
        on right: 168
    main_function (140)
        on left: 170
        on right: 1
    $@9 (141)
        on left: 169
        on right: 170
    main_header (142)
        on left: 171
        on right: 170


State 0

    0 $accept: • program $end

    $default  reduce using rule 3 (global_declarations)

    program              go to state 1
    global_declarations  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: global_declarations • main_function
    2 global_declarations: global_declarations • global_declaration

    TYPEDEF  shift, and go to state 4
    CHAR     shift, and go to state 5
    INT      shift, and go to state 6
    FLOAT    shift, and go to state 7
    CONST    shift, and go to state 8
    UNION    shift, and go to state 9
    CLASS    shift, and go to state 10
    VOID     shift, and go to state 11
    LIST     shift, and go to state 12
    ID       shift, and go to state 13

    global_declaration       go to state 14
    typedef_declaration      go to state 15
    typename                 go to state 16
    standard_type            go to state 17
    const_declaration        go to state 18
    class_declaration        go to state 19
    short_func_declaration   go to state 20
    short_par_func_header    go to state 21
    func_header_start        go to state 22
    nopar_func_header        go to state 23
    union_declaration        go to state 24
    global_var_declaration   go to state 25
    func_declaration         go to state 26
    full_func_declaration    go to state 27
    full_par_func_header     go to state 28
    class_func_header_start  go to state 29
    nopar_class_func_header  go to state 30
    main_function            go to state 31
    main_header              go to state 32


State 3

    0 $accept: program $end •

    $default  accept


State 4

   11 typedef_declaration: TYPEDEF • typename listspec ID $@1 dims SEMI

    CHAR   shift, and go to state 5
    INT    shift, and go to state 33
    FLOAT  shift, and go to state 7
    VOID   shift, and go to state 11
    ID     shift, and go to state 13

    typename       go to state 34
    standard_type  go to state 17


State 5

   14 standard_type: CHAR •

    $default  reduce using rule 14 (standard_type)


State 6

   15 standard_type: INT •
  171 main_header: INT • MAIN LPAREN RPAREN

    MAIN  shift, and go to state 35

    $default  reduce using rule 15 (standard_type)


State 7

   16 standard_type: FLOAT •

    $default  reduce using rule 16 (standard_type)


State 8

   23 const_declaration: CONST • typename constdefs SEMI

    CHAR   shift, and go to state 5
    INT    shift, and go to state 33
    FLOAT  shift, and go to state 7
    VOID   shift, and go to state 11
    ID     shift, and go to state 13

    typename       go to state 36
    standard_type  go to state 17


State 9

  104 union_declaration: UNION • ID union_body SEMI

    ID  shift, and go to state 37


State 10

   67 class_declaration: CLASS • ID class_body SEMI

    ID  shift, and go to state 38


State 11

   17 standard_type: VOID •

    $default  reduce using rule 17 (standard_type)


State 12

   98 func_header_start: LIST • ID
  122 class_func_header_start: LIST • func_class ID

    ID  shift, and go to state 39

    func_class  go to state 40


State 13

   13 typename: ID •

    $default  reduce using rule 13 (typename)


State 14

    2 global_declarations: global_declarations global_declaration •

    $default  reduce using rule 2 (global_declarations)


State 15

    4 global_declaration: typedef_declaration •

    $default  reduce using rule 4 (global_declaration)


State 16

   97 func_header_start: typename • ID
  105 global_var_declaration: typename • init_variabledefs SEMI
  121 class_func_header_start: typename • func_class ID

    LIST  shift, and go to state 41
    ID    shift, and go to state 42

    variabledef        go to state 43
    init_variabledefs  go to state 44
    init_variabledef   go to state 45
    func_class         go to state 46


State 17

   12 typename: standard_type •

    $default  reduce using rule 12 (typename)


State 18

    5 global_declaration: const_declaration •

    $default  reduce using rule 5 (global_declaration)


State 19

    6 global_declaration: class_declaration •

    $default  reduce using rule 6 (global_declaration)


State 20

  111 func_declaration: short_func_declaration •

    $default  reduce using rule 111 (func_declaration)


State 21

   94 short_func_declaration: short_par_func_header • SEMI

    SEMI  shift, and go to state 47


State 22

   96 short_par_func_header: func_header_start • LPAREN parameter_types RPAREN
  103 nopar_func_header: func_header_start • LPAREN RPAREN
  120 full_par_func_header: func_header_start • LPAREN parameter_list RPAREN

    LPAREN  shift, and go to state 48


State 23

   95 short_func_declaration: nopar_func_header • SEMI
  118 full_func_declaration: nopar_func_header • $@6 LBRACE decl_statements RBRACE

    SEMI  shift, and go to state 49

    $default  reduce using rule 117 ($@6)

    $@6  go to state 50


State 24

    7 global_declaration: union_declaration •

    $default  reduce using rule 7 (global_declaration)


State 25

    8 global_declaration: global_var_declaration •

    $default  reduce using rule 8 (global_declaration)


State 26

    9 global_declaration: func_declaration •

    $default  reduce using rule 9 (global_declaration)


State 27

  112 func_declaration: full_func_declaration •

    $default  reduce using rule 112 (func_declaration)


State 28

  114 full_func_declaration: full_par_func_header • $@4 LBRACE decl_statements RBRACE

    $default  reduce using rule 113 ($@4)

    $@4  go to state 51


State 29

  119 full_par_func_header: class_func_header_start • LPAREN parameter_list RPAREN
  128 nopar_class_func_header: class_func_header_start • LPAREN RPAREN

    LPAREN  shift, and go to state 52


State 30

  116 full_func_declaration: nopar_class_func_header • $@5 LBRACE decl_statements RBRACE

    $default  reduce using rule 115 ($@5)

    $@5  go to state 53


State 31

    1 program: global_declarations main_function •

    $default  reduce using rule 1 (program)


State 32

  170 main_function: main_header • $@9 LBRACE decl_statements RBRACE

    $default  reduce using rule 169 ($@9)

    $@9  go to state 54


State 33

   15 standard_type: INT •

    $default  reduce using rule 15 (standard_type)


State 34
